# apple-reminders-mcp

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/apple_reminders_mcp/: __init__.py  server.py
