[project]
name = "apple-reminders-mcp"
version = "0.1.0"
description = "MCP server for Apple Reminders on macOS via EventKit (pyobjc)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "yazilim.vip" }]
keywords = ["mcp", "apple-reminders", "macos", "eventkit", "pyobjc", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pyobjc-framework-EventKit>=11.0",
]

[project.urls]
Homepage = "https://github.com/yazilim-vip/apple-reminders-mcp"
Repository = "https://github.com/yazilim-vip/apple-reminders-mcp"
Issues = "https://github.com/yazilim-vip/apple-reminders-mcp/issues"

[project.scripts]
apple-reminders-mcp = "apple_reminders_mcp.server:main"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_reminders_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
